<resources>
    <string name="app_name">TravelQuest</string>
    <string name="title1"> Travel</string>
    <string name="title2">Quest \</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Retype password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">1147842338705744</string>
    <string name="fb_login_protocol_scheme">fb1147842338705744</string>
    <string name="google_maps_key">AIzaSyD-xWxS4wf8BdPZrKX-w59HPz07CfNPXd0</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_form_title">We\'d need some more information about you ...</string>
    <string name="password_fail">Wrong password</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="edit_information">Edit information</string>


    <!-- Homepage -->
    <string name="i_want_to">I want to travel...</string>
    <string name="travel_alone">Alone</string>
    <string name="travel_group">With people</string>
    <string name="i_want_to_meet">I want to meet...</string>
    <string name="meet_local_people">Local people</string>
    <string name="meet_foreign_people">Foreign people</string>
    <string name="start">Start!</string>

    <!-- Preferences -->
    <string name="im_interested_in">I\'m interested in...</string>
    <string name="food">Food</string>
    <string name="drinks">Drinks</string>
    <string name="sightseeing">Sightseeing</string>
    <string name="music">Music</string>
    <string name="party">Party</string>
    <string name="next">Next</string>
    <string name="save_changes">Save changes</string>
    <string name="edit_preferences">Edit preferences</string>

    <!-- Map -->
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Pick a place</string>
    <string name="default_info_title">Information</string>
    <string name="default_info_snippet">Info snippet</string>
    <string name="reward">Reward</string>

    <!-- Reward -->
    <string name="congratulations">Congratulations!</string>


    <!-- Miscenalleous -->
    <string name="save">Save</string>
    <string name="close">Close</string>
</resources>
