<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_wallpaper"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:alpha="0.7"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/preferences_padding"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/im_interested_in"
                android:textSize="@dimen/homepage_textsize"/>
            <CheckBox
                android:id='@+id/preference_food'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/preferences_padding"
                android:text="@string/food"
                android:textSize="@dimen/preferences_textsize"/>
            <CheckBox
                android:id='@+id/preference_drink'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/preferences_textsize"
                android:layout_margin="@dimen/preferences_padding"
                android:text="@string/drinks"/>
            <CheckBox
                android:id='@+id/preference_sight'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/preferences_textsize"
                android:layout_margin="@dimen/preferences_padding"
                android:text="@string/sightseeing"/>
            <CheckBox
                android:id='@+id/preference_music'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/preferences_textsize"
                android:layout_margin="@dimen/preferences_padding"
                android:text="@string/music"/>
            <CheckBox
                android:id='@+id/preference_party'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/preferences_textsize"
                android:layout_margin="@dimen/preferences_padding"
                android:text="@string/party"/>

            <Button
                android:id="@+id/preferences_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/preferences_padding"
                android:background="@color/colorPrimary"
                android:text="@string/next"/>

        </LinearLayout>



    </FrameLayout>
</LinearLayout>