<?xml version="1.0" encoding="utf-8"?>
<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/main_wallpaper">-->

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/main_wallpaper">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:alpha="0.7"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i_want_to"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/homepage_button_padding"
                android:textSize="@dimen/homepage_textsize"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/homepage_button_padding">


                <RadioButton
                    android:id="@+id/travel_alone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/travel_alone"
                    android:textSize="@dimen/preferences_textsize"
                    />
                <RadioButton
                    android:id="@+id/travel_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/travel_alone"
                    android:text="@string/travel_group"
                    android:textSize="@dimen/preferences_textsize"
                    />
            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i_want_to"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/homepage_button_padding"
                android:textSize="@dimen/homepage_textsize"/>
            <RadioGroup
                android:id="@+id/meet_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/homepage_button_padding">
                <RadioButton
                    android:id="@+id/meet_local_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meet_local_people"
                    android:textSize="@dimen/preferences_textsize"/>
                <RadioButton
                    android:id="@+id/meet_foreign_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meet_foreign_people"
                    android:textSize="@dimen/preferences_textsize"/>
            </RadioGroup>

            <Button
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:text="@string/start"/>

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/preferences_padding"
                android:indeterminate="true"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"/>

        </LinearLayout>
    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>
</android.support.v4.widget.DrawerLayout>




