<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/linear_layout_shape">

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/preferences_padding"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/login_text_margin"
                    android:gravity="center_horizontal"
                    android:text="@string/login_form_title"
                    android:textSize="@dimen/login_form_title"
                    />
                <EditText
                    android:id='@+id/form_mail'
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/preferences_padding"
                    android:text=""
                    android:textSize="@dimen/preferences_textsize"
                    android:hint="Email"
                    android:textColorHint="@color/colorText"
                    android:backgroundTint="@color/colorAccent"
                    android:textCursorDrawable="@null"/>
                <EditText
                    android:id='@+id/form_password'
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/preferences_padding"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:text=""
                    android:textSize="@dimen/preferences_textsize"
                    android:textColorHint="@color/colorText"
                    android:backgroundTint="@color/colorAccent"
                    android:textCursorDrawable="@null"/>
                <EditText
                    android:id='@+id/form_confirm_password'
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/preferences_padding"
                    android:hint="Retype password"
                    android:inputType="textPassword"
                    android:text=""
                    android:textSize="@dimen/preferences_textsize"
                    android:textColorHint="@color/colorText"
                    android:backgroundTint="@color/colorAccent"
                    android:textCursorDrawable="@null"/>
                <EditText
                    android:id='@+id/form_first_name'
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_first_name"
                    android:textSize="@dimen/preferences_textsize"
                    android:layout_margin="@dimen/preferences_padding"
                    android:text=""
                    android:textColorHint="@color/colorText"
                    android:backgroundTint="@color/colorAccent"
                    android:textCursorDrawable="@null"/>
                <EditText
                    android:id='@+id/form_last_name'
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_last_name"
                    android:textSize="@dimen/preferences_textsize"
                    android:layout_margin="@dimen/preferences_padding"
                    android:textColorHint="@color/colorText"
                    android:backgroundTint="@color/colorAccent"
                    android:textCursorDrawable="@null"/>

                <RadioGroup
                    android:id="@+id/form_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/preferences_padding"
                        android:text="@string/male"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/preferences_padding"
                        android:text="@string/female"/>
                </RadioGroup>
                <Button
                    android:id="@+id/login_form_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/preferences_padding"
                    android:background="@drawable/big_round_button"
                    android:text="@string/next"/>

            </LinearLayout>
        </ScrollView>



    </FrameLayout>
</LinearLayout>